k8s/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
