k8s/frontend/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
spec:
  podSelector:
    matchLabels:
      app: frontend-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend-app  # Allow traffic from backend pods
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0  # Allow outgoing traffic to any external address
